--- a/src/content/data/nav.yaml
+++ b/src/content/data/nav.yaml
@@ -12,14 +12,62 @@
     - label: AI & Machine Learning
       url: /solutions/ai-ml
 - label: Technologies
-  url: /technologies
+  key: technologies
+  children:
+    - label: Linux Kernel LTS
+      url: /technologies/lk-lts
+    - label: Apache Big Top
+      url: /technolgoies/apache-big-top
+    - label: Cloud Computing & Data Center
+      url: /technologies/cloud-computing
+    - label: Arm Open Source Projects
+      url: /technologies/arm-open-source
 - label: Services & Support
-  url: /services
+  key: Services
+  children:
+    - label: Consulting
+      url: /services/consulting
+    - label: Training & Learning
+      url: /services/training
 - label: Collaborative Projects
-  url: /collaborative-projects
+  key: collaborative
+  children:
+    - label: Windows on Arm
+      url: /projects/windows-on-arm
+    - label: Android Ecosystem
+      url: /projects/android
+    - label: Automative, IoT & Edge
+      url: /projects/automotive
+    - label: Cloud Computing & Servers
+      url: /projects/cloud-computing
+    - label: Qualcomm Platform Services
+      url: /projects/qualcomm-platform
 - label: Resource Center
-  url: /resources
+  key: resources
+  children: 
+    - label: Downloads
+      url: /downloads
+    - label: Blog
+      url: /blog
+    - label: White Papers
+      url: /white-papers
+    - label: Newsroom
+      url: /news
+    - label: Videos & Webinars
+      url: /videos
+    - label: Solutions Briefs
+      url: /solutions-briefs
+    - label: Events
+      url: /events
+    - label: Linaro Connect
+      url: /events/linaro-connect
 - label: Company
-  url: /company
-- label: Contact Us
-  url: /contact
+  key: company
+  children:
+    - label: About
+      url: /about
+    - label: Careers
+      url: /careers
+    - label: Contact
+      url: /contact
+
