--- a/src/content/data/footer.yaml
+++ b/src/content/data/footer.yaml
@@ -1,5 +1,7 @@
 company_links:
-  - label: Legal
-    url: https://www.linaro.org/legal/
   - label: Contact
-    url: https://www.linaro.org/contact
+    url: /contact
+  - label: Legal
+    url: /legal
+  - label: Cookies
+    url: /cookies
