--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/mdx": "^2.2.3",
     "@astrojs/sitemap": "^3.1.1",
+    "@astrojs/solid-js": "^4.0.1",
     "@astrojs/tailwind": "^5.1.0",
     "@cloudinary/url-gen": "^1.19.0",
     "@fontsource/lato": "^5.0.20",
@@ -21,9 +22,14 @@
     "astro": "^4.5.8",
     "astro-icon": "^1.1.0",
     "astro-navbar": "^2.3.1",
+    "astro-pagefind": "^1.5.0",
     "astro-seo": "^0.8.3",
     "dayjs": "^1.11.10",
     "marked": "^12.0.1",
+    "pagefind": "^1.1.0",
+    "remark": "^15.0.1",
+    "solid-js": "^1.8.16",
+    "strip-markdown": "^6.0.0",
     "tailwindcss": "^3.4.1",
     "tw-elements": "^2.0.0",
     "vanilla-cookieconsent": "^3.0.0"
