--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,9 @@
   "compilerOptions": {
     "allowJs": true,
     "strictNullChecks": true,
-    "baseUrl": "/home/louis/Dev/LinaroWebsite",
+    "baseUrl": "./",
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"]
     },
     "jsx": "preserve",
     "jsxImportSource": "solid-js"
