--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^2.2.3",
+    "@astrojs/mdx": "^2.2.4",
     "@astrojs/sitemap": "^3.1.1",
     "@astrojs/solid-js": "^4.0.1",
     "@astrojs/tailwind": "^5.1.0",
@@ -19,7 +19,7 @@
     "@fontsource/lato": "^5.0.20",
     "@iconify-json/mdi": "^1.1.64",
     "@tailwindcss/typography": "^0.5.10",
-    "astro": "^4.5.8",
+    "astro": "^4.5.16",
     "astro-icon": "^1.1.0",
     "astro-navbar": "^2.3.1",
     "astro-pagefind": "^1.5.0",
@@ -28,9 +28,11 @@
     "marked": "^12.0.1",
     "pagefind": "^1.1.0",
     "remark": "^15.0.1",
+    "solid-collapse": "^1.1.0",
+    "solid-icons": "^1.1.0",
     "solid-js": "^1.8.16",
     "strip-markdown": "^6.0.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "tw-elements": "^2.0.0",
     "vanilla-cookieconsent": "^3.0.0"
   },
