--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@cloudinary/url-gen": "^1.19.0",
     "@fontsource/lato": "^5.0.20",
     "@iconify-json/mdi": "^1.1.64",
+    "@solid-primitives/scheduled": "^1.4.3",
     "@tailwindcss/typography": "^0.5.12",
     "astro": "^4.5.16",
     "astro-icon": "^1.1.0",
