--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "linaro-astro-template",
+  "name": "linaro-astro",
   "license": "MIT",
   "type": "module",
   "version": "0.0.4",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "sst bind astro dev",
     "start": "astro dev",
+    "start:public": "IS_PUBLIC=true astro dev",
+    "start:build": "IS_PUBLIC=true astro build --ignore-scripts && IS_PUBLIC=true astro dev",
+    "prebuild": "PRE_BUILD=true astro build --ignore-scripts --outDir ./dist_prebuild/",
     "build": "astro build",
+    "postbuild": "pagefind --site ./dist_prebuild/dist/client --output-path ./dist/client/pagefind",
+    "build:public": "IS_PUBLIC=true astro build --ignore-scripts",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -15,6 +20,8 @@
     "@astrojs/sitemap": "^3.1.2",
     "@astrojs/solid-js": "^4.0.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@auth/core": "^0.18.6",
+    "@biscuit-auth/biscuit-wasm": "^0.4.0",
     "@cloudinary/url-gen": "^1.19.0",
     "@fontsource/lato": "^5.0.20",
     "@iconify-json/mdi": "^1.1.64",
@@ -23,8 +30,10 @@
     "astro": "^4.5.16",
     "astro-icon": "^1.1.0",
     "astro-navbar": "^2.3.1",
-    "astro-pagefind": "^1.5.0",
+    "astro-pagefind": "^1.4.0",
     "astro-seo": "^0.8.3",
+    "astro-sst": "^2.41.4",
+    "auth-astro": "^4.1.1",
     "cloudinary-video-player": "^2.0.0",
     "dayjs": "^1.11.10",
     "marked": "^12.0.1",
@@ -32,6 +41,7 @@
     "remark": "^15.0.1",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.8.16",
+    "sst": "^2.41.4",
     "strip-markdown": "^6.0.0",
     "tailwindcss": "^3.4.3",
     "tw-elements": "^2.0.0",
