fix various layout issues

--- a/src/content/data/footer.yaml
+++ b/src/content/data/footer.yaml
@@ -3,5 +3,5 @@ company_links:
     url: /contact
   - label: Legal
     url: /legal
-  - label: Cookies
-    url: /cookies
+  # - label: Cookies
+  #   url: /cookies
