chiara feedback fixes

--- a/src/content/data/nav.yaml
+++ b/src/content/data/nav.yaml
@@ -37,7 +37,7 @@
     - label: Blog
       url: /blog
     - label: White Papers
-      url: /white-papers
+      url: /whitepapers
     - label: Newsroom
       url: /news
     - label: Videos & Webinars
