--- a/src/content/data/socials.yaml
+++ b/src/content/data/socials.yaml
@@ -1,6 +1,6 @@
-- label: Twitter
-  icon: twitter
-  url: https://twitter.com/linaroorg
+- label: X
+  icon: X
+  url: https://x.com/linaroorg
 - label: Facebook
   icon: facebook
   url: https://www.facebook.com/LinaroOrg
