--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.6.0",
     "@astrojs/mdx": "^2.2.4",
     "@astrojs/sitemap": "^3.1.2",
     "@astrojs/solid-js": "^4.0.1",
@@ -34,7 +35,6 @@
     "astro-seo": "^0.8.3",
     "astro-sst": "^2.41.4",
     "auth-astro": "^4.1.1",
-    "cloudinary-video-player": "^2.0.0",
     "dayjs": "^1.11.10",
     "marked": "^12.0.1",
     "pagefind": "^1.1.0",
@@ -50,6 +50,7 @@
   "devDependencies": {
     "postcss": "^8.4.38",
     "sass": "^1.72.0",
-    "tailwindcss-animated": "^1.0.1"
+    "tailwindcss-animated": "^1.0.1",
+    "typescript": "^5.4.5"
   }
 }
