--- a/src/content/data/nav.yaml
+++ b/src/content/data/nav.yaml
@@ -18,8 +18,8 @@
       url: /services/consulting
     - label: Training & Learning
       url: /services/training
-- label: Collaborative Projects
-  key: collaborative
+- label: Ecosystem Projects
+  key: ecosystem
   children:
     - label: Windows on Arm
       url: /projects/windows-on-arm
