--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -63,7 +63,7 @@ jobs:
           export CLOUDINARY_API_SECRET=${{ secrets.CLOUDINARY_API_SECRET }}
           export CLOUDINARY_URL=${{ secrets.CLOUDINARY_URL }}
           # For pull requests, we set custom domain to the preview URL
-          export CUSTOM_DOMAIN=${{ vars.AWS_STATIC_SITE_URL }}
+          export CUSTOM_DOMAIN="${{ vars.AWS_STATIC_SITE_URL }}-${{ github.event.number }}"
           export AWS_STATIC_SITE_URL=${{ vars.AWS_STATIC_SITE_URL }}
           # Build script does yarn install and yarn build
           /srv/github-action-scripts/build-astro-site.sh
