Set up GA_ID when building the site

--- a/.github/workflows/push_main.yml
+++ b/.github/workflows/push_main.yml
@@ -60,6 +60,7 @@ jobs:
           export CLOUDINARY_API_SECRET=${{ secrets.CLOUDINARY_API_SECRET }}
           export CLOUDINARY_URL=${{ secrets.CLOUDINARY_URL }}
           export CUSTOM_DOMAIN=${{ vars.MAIN_CUSTOM_DOMAIN }}
+          export GA_ID=${{ vars.MAIN_GA_ID }}
           # Set up yarn
           yarn install
           pipenv install
