--- a/src/content/data/nav.yaml
+++ b/src/content/data/nav.yaml
@@ -23,7 +23,7 @@
   children:
     - label: Windows on Arm
       url: /projects/windows-on-arm
-    - label: Automative, IoT & Edge
+    - label: Automotive, IoT & Edge
       url: /projects/automotive-iot-edge
     - label: Cloud Computing & Servers
       url: /projects/cloud-computing
