--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@astrojs/check": "^0.6.0",
     "@astrojs/mdx": "^2.2.4",
+    "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.2",
     "@astrojs/solid-js": "^4.0.1",
     "@astrojs/tailwind": "^5.1.0",
