--- a/src/content/data/footer.yaml
+++ b/src/content/data/footer.yaml
@@ -35,6 +35,8 @@ nav_links:
       url: /projects/cloud-computing
     - label: Qualcomm Platform Services
       url: /projects/qualcomm-platform
+    - label: Ecosystem Dashboard
+      url: https://ecosystemdashboard.linaro.org
 - label: Resource Center
   key: resources
   children: 
