--- a/src/content/data/nav.yaml
+++ b/src/content/data/nav.yaml
@@ -29,6 +29,8 @@
       url: /projects/cloud-computing
     - label: Qualcomm Platform Services
       url: /projects/qualcomm-platform
+    - label: Ecosystem Dashboard
+      url: https://ecosystemdashboard.linaro.org
 - label: Resource Center
   key: resources
   children: 
