--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
   },
   "devDependencies": {
     "postcss": "^8.4.38",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
     "sass": "^1.72.0",
     "tailwindcss-animated": "^1.0.1",
     "typescript": "^5.4.5"
