--- a/src/content/data/nav.yaml
+++ b/src/content/data/nav.yaml
@@ -33,7 +33,7 @@
       url: https://ecosystemdashboard.linaro.org
 - label: Resource Center
   key: resources
-  children: 
+  children:
     - label: Downloads
       url: /downloads
     - label: Blog
@@ -46,6 +46,8 @@
       url: https://resources.linaro.org/
     - label: Events
       url: /events
+    - label: Connect 2025
+      url: /connect
 - label: Company
   key: company
   children:
@@ -53,4 +55,3 @@
       url: /about
     - label: Careers
       url: /careers
-
