--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@solid-primitives/scheduled": "^1.4.3",
     "@tailwindcss/typography": "^0.5.12",
     "astro": "^4.5.16",
+    "astro-cloudinary": "^1.1.0",
     "astro-icon": "^1.1.0",
     "astro-navbar": "^2.3.1",
     "astro-pagefind": "^1.4.0",
