--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "remark": "^15.0.1",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.8.16",
-    "sst": "^2.41.4",
+    "sst": "2.48.5",
     "strip-markdown": "^6.0.0",
     "tailwindcss": "^3.4.3",
     "tw-elements": "^2.0.0",
