--- a/src/content/data/footer.yaml
+++ b/src/content/data/footer.yaml
@@ -2,40 +2,41 @@ nav_links:
   - label: Products & Solutions
     key: solutions
     children:
-      - label: Linux Kernel Testing
-        children:
-          - label: Long term Support
-            url: /solutions/lts
-      - label: Virtualization
-        children: 
-        - label: QEMU
-          url: /virtualization/qemu
-        - label: VIRTIO
-          url: /virtualization/virtio
       - label: HPC
-        children: 
-        - label: LinaroForge
-          url: https://www.linaroforge.com
-      - label: IoT&Embedded
-        url: /solutions/onelab
-      - label: AI&Machine Learning
+        url: https://www.linaroforge.com
+      - label: IoT & Embedded Systems
+        url: /solutions/iot-embedded
+        children:
+          - label: CodeLinaro
+            url: /solutions/codelinaro
+          - label: ONELab
+            url: /solutions/onelab
+      - label: AI & Machine Learning
         url: /solutions/ai-ml
       - label: Automotive
         url: /solutions/automotive
-  - label: Services
+      - label: Long Term Support
+        url: /solutions/lts
+  - label: Services & Support
     key: Services
     children:
+      - label: Consulting
+        url: /services/consulting
+      - label: Training & Learning
+        url: /services/training
       - label: NXP Platform Services
         url: /services/nxp-platform-services
       - label: Qualcomm Platform Services
         url: /projects/qualcomm-platform
-      - label: Windows on Arm
-        url: /projects/windows-on-arm
-      - label: Training
-        url: /services/training
   - label: Ecosystem Projects
     key: ecosystem
     children:
+      - label: Windows on Arm
+        url: /projects/windows-on-arm
+      - label: Automotive, IoT & Edge
+        url: /projects/automotive-iot-edge
+      - label: Cloud Computing & Servers
+        url: /projects/cloud-computing
       - label: Ecosystem Dashboard
         url: https://ecosystemdashboard.linaro.org
   - label: Resource Center
@@ -62,9 +63,6 @@ nav_links:
         url: /about
       - label: Careers
         url: /careers
-  - label: Linaro Solutions Hub
-    key: solutionsHub
-    url: https://hub.linaro.com
 
 company_links:
   - label: Contact
