--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "preview": "astro preview",
+    "prebuild": "dotenv -e .env -- envsubst < public/admin/config.template.yml > public/admin/config.yml",
     "build": "astro build",
     "start:public": "IS_PUBLIC=true astro dev",
     "dev:public": "IS_PUBLIC=true astro dev",
@@ -42,6 +43,7 @@
     "astro-sst": "^2.41.4",
     "auth-astro": "^4.1.1",
     "dayjs": "^1.11.10",
+    "decap-cms-app": "^3.8.3",
     "marked": "^12.0.1",
     "pagefind": "^1.1.0",
     "remark": "^15.0.1",
@@ -55,6 +57,7 @@
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "dotenv-cli": "^10.0.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
