--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "preview": "astro preview",
-    "prebuild": "dotenv -e .env -- envsubst < public/admin/config.template.yml > public/admin/config.yml",
-    "build": "astro build",
+    "build": "astro build && node scripts/replace-config.mjs",
     "start:public": "IS_PUBLIC=true astro dev",
     "dev:public": "IS_PUBLIC=true astro dev",
     "preview:public": "IS_PUBLIC=true astro preview",
@@ -57,6 +56,7 @@
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "dotenv": "^17.2.2",
     "dotenv-cli": "^10.0.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.3",
