Set Decap_domain value in CI

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -11,6 +11,7 @@ concurrency:
 
 env:
   NODE_VERSION: "20.x"
+  DECAP_DOMAIN: ${{ secrets.DECAP_DOMAIN }}
 
 jobs:
   process-pull-request:
@@ -52,6 +53,7 @@ jobs:
       - name: Build site
         run: |
           # Set up the environment variables
+          echo "DECAP_DOMAIN is $DECAP_DOMAIN"
           export NODE_OPTIONS=--experimental-wasm-modules
           export IS_PUBLIC=true
           export IS_PREVIEW=true
@@ -59,7 +61,6 @@ jobs:
           export CLOUDINARY_API_KEY=${{ secrets.CLOUDINARY_API_KEY }}
           export CLOUDINARY_API_SECRET=${{ secrets.CLOUDINARY_API_SECRET }}
           export CLOUDINARY_URL=${{ secrets.CLOUDINARY_URL }}
-          export DECAP_DOMAIN=${{ secrets.DECAP_DOMAIN }}
           export PUBLIC_CLOUDINARY_CLOUD_NAME=${{ secrets.PUBLIC_CLOUDINARY_CLOUD_NAME }}
           # For pull requests, we set custom domain to the preview URL
           export CUSTOM_DOMAIN="${{ vars.AWS_STATIC_SITE_URL }}-${{ github.event.number }}.ghactions.linaro.org"
