--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -11,7 +11,6 @@ concurrency:
 
 env:
   NODE_VERSION: "20.x"
-  DECAP_DOMAIN: ${{ vars.DECAP_DOMAIN }}
 
 jobs:
   process-pull-request:
@@ -62,6 +61,8 @@ jobs:
           export CLOUDINARY_API_SECRET=${{ secrets.CLOUDINARY_API_SECRET }}
           export CLOUDINARY_URL=${{ secrets.CLOUDINARY_URL }}
           export PUBLIC_CLOUDINARY_CLOUD_NAME=${{ secrets.PUBLIC_CLOUDINARY_CLOUD_NAME }}
+          export DECAP_DOMAIN=${{ vars.DECAP_DOMAIN }}
+          echo "DECAP_DOMAIN is $DECAP_DOMAIN"
           # For pull requests, we set custom domain to the preview URL
           export CUSTOM_DOMAIN="${{ vars.AWS_STATIC_SITE_URL }}-${{ github.event.number }}.ghactions.linaro.org"
           export AWS_STATIC_SITE_URL=${{ vars.AWS_STATIC_SITE_URL }}
