--- a/public/admin/config.template.yml
+++ b/public/admin/config.template.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   repo: Linaro/linaro-astro
   branch: main
-  base_url: "https://gsg44ioab4.execute-api.us-east-1.amazonaws.com"
+  base_url: "${DECAP_DOMAIN}"
   auth_endpoint: auth
   squash_merges: true
   cms_label_prefix: cms/
