--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "auth-astro": "^4.1.1",
     "dayjs": "^1.11.10",
     "decap-cms-app": "^3.8.3",
+    "gray-matter": "^4.0.3",
     "marked": "^12.0.1",
     "pagefind": "^1.1.0",
     "remark": "^15.0.1",
