--- a/public/admin/config.template.yml
+++ b/public/admin/config.template.yml
@@ -65,7 +65,12 @@ collections:
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "text" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - {
+          label: "Publish Date",
+          name: "date",
+          widget: "utc-datetime",
+          format: "YYYY-MM-DDTHH:mm:ss.SSSZ",
+        }
 
       - label: "Author"
         name: "author"
