Add News Config

--- a/public/admin/config.template.yml
+++ b/public/admin/config.template.yml
@@ -1,4 +1,3 @@
-local_backend: true
 backend:
   name: github
   repo: Linaro/linaro-astro
@@ -58,6 +57,60 @@ collections:
     label: "Blog"
     label_singular: "Post"
     folder: "src/content/blogs"
+    create: true
+    extension: "mdx"
+    format: "frontmatter"
+    slug: "{{slug}}"
+    summary: "{{title}} — {{date}}"
+    sortable_fields: ["date", "title"]
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Description", name: "description", widget: "text" }
+      - {
+          label: "Publish Date",
+          name: "date",
+          widget: "utc-datetime",
+          format: "YYYY-MM-DDTHH:mm:ss.SSSZ",
+        }
+
+      - label: "Author"
+        name: "author"
+        widget: "relation"
+        collection: "authors"
+        search_fields: ["name"]
+        value_field: "slug_name"
+        display_fields: ["name"]
+
+      - label: "Tags"
+        name: "tags"
+        widget: "relation"
+        collection: "tags"
+        search_fields: ["name"]
+        value_field: "slug_name"
+        display_fields: ["name"]
+        multiple: true
+
+      - {
+          label: "Featured Image",
+          name: "image",
+          widget: "image",
+          choose_url: true,
+        }
+      - {
+          label: "Related",
+          name: "related",
+          widget: "list",
+          default: [],
+          field: { label: "Item", name: "item", widget: "string" },
+        }
+      # Main content
+      - { label: "Body", name: "body", widget: "markdown" }
+
+  # News Collection
+  - name: "news"
+    label: "News"
+    label_singular: "Post"
+    folder: "src/content/news"
     create: true
     extension: "mdx"
     format: "frontmatter"
