--- a/.github/workflows/push_main.yml
+++ b/.github/workflows/push_main.yml
@@ -14,6 +14,7 @@ env:
   NODE_VERSION: "20.x"
 
 permissions:
+  id-token: write
   contents: read
 
 jobs:
@@ -38,6 +39,12 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::691071635361:role/github-actions-oidc-role
+          aws-region: us-east-1
 
       - name: security.txt
         run: |
@@ -65,8 +72,6 @@ jobs:
           export GA_ID=${{ vars.MAIN_GA_ID }}
           # Set up yarn
           yarn install
-          pipenv install
-          $(pipenv run python ./get_aws_creds.py -i ${{ secrets.VAULT_ROLE_ID }} -s ${{ secrets.VAULT_SECRET_ID }} -r ${{ secrets.VAULT_ROLE }} 2>&1 | tee /dev/stderr)
           # Build & deploy
           if [ -d "dist" ]; then
             rm -rf dist
