reorg nav bar and urls

--- a/src/content/data/nav.yaml
+++ b/src/content/data/nav.yaml
@@ -1,41 +1,60 @@
-- label: Products & Solutions
-  key: solutions
-  children:
-    - label: HPC
-      url: https://www.linaroforge.com
-    - label: IoT & Embedded Systems
-      url: /solutions/iot-embedded
-    - label: AI & Machine Learning
-      url: /solutions/ai-ml
-    - label: Automotive
-      url: /solutions/automotive
-    - label: Long Term Support
-      url: /solutions/lts
-- label: Services & Support
+- label: Services
   key: Services
   children:
     - label: Consulting
       url: /services/consulting
-    - label: Training & Learning
-      url: /services/training
     - label: BSP Development
       url: /services/bsp-development
+    # - label: Upstreaming Linux kernel Services
+    #   url: /services/upstreaming-linux-kernel
+    - label: Long Term Support
+      url: /services/lts
+    - label: Training
+      url: /services/training
+    - label: Qualcomm Centre of Excellence
+      url: /services/qualcomm-platform
     - label: NXP Platform Services
       url: /services/nxp-platform-services
-    - label: Qualcomm Platform Services
-      url: /projects/qualcomm-platform
-- label: Ecosystem Projects
-  key: ecosystem
+- label: Solutions
+  key: solutions
   children:
-    - label: Windows on Arm
-      url: /projects/windows-on-arm
-    - label: Automotive, IoT & Edge
-      url: /projects/automotive-iot-edge
-    - label: Cloud Computing & Servers
-      url: /projects/cloud-computing
-    - label: Ecosystem Dashboard
-      url: https://ecosystemdashboard.linaro.org
-- label: Resource Center
+    - label: Linaro Forge
+      url: https://www.linaroforge.com
+    - label: ONELab
+      url: https://hub.linaro.com/
+    # - label: IoT & Embedded Systems
+    #   url: /solutions/iot-embedded
+- label: Industries
+  key: industries
+  children: 
+    # - label: Industrial
+    #   url: /industries/industrial
+    - label: Automotive
+      url: /industries/automotive
+    # - label: Consumer
+    #   url: /industries/consumer
+    # - label: Enterprise
+    #   url: /industries/enterprise
+- label: Technologies
+  key: technologies
+  children:
+    # - label: Firmware
+    #   url: /technologies/firmware
+    # - label: Security
+    #   url: /technologies/security
+    # - label: Linux kernel
+    #   url: /technologies/linux-kernel
+    # - label: Toolchain
+    #   url: /technologies/toolchain
+    # - label: Virtualization
+    #   url: /technologies/virtualization
+    # - label: Testing
+    #   url: /technologies/testing
+    # - label: Confidential Computing
+    #   url: /technologies/confidential-computing
+    - label: AI & Machine Learning
+      url: /technologies/ai-ml
+- label: Resources
   key: resources
   children:
     - label: Downloads
@@ -48,8 +67,6 @@
       url: /news
     - label: Events
       url: /events
-    - label: Connect 2025
-      url: /connect
 - label: Company
   key: company
   children:
@@ -57,3 +74,19 @@
       url: /about
     - label: Careers
       url: /careers
+    - label: Contact Us
+      url: /contact
+
+# - label: Ecosystem Projects
+#   key: ecosystem
+#   children:
+#     - label: Windows on Arm
+#       url: /projects/windows-on-arm
+#     - label: Automotive, IoT & Edge
+#       url: /projects/automotive-iot-edge
+#     - label: Cloud Computing & Servers
+#       url: /projects/cloud-computing
+    # - label: Ecosystem Dashboard
+    #   url: https://ecosystemdashboard.linaro.org
+
+
